Fix extracurricular overflow

--- a/src/styles/Resume.css
+++ b/src/styles/Resume.css
@@ -4,7 +4,7 @@
     min-width: 23.25cm;
     max-width: 23.26cm;
     min-height: 30.05cm;
-    max-height: 30.05cm;
+    height: fit-content;
     box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
     margin-bottom: 0;
 }
